--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>موقعي البسيط</title>
-  </head>
-  <body>
-    <h1>أهلاً بيك في موقعي!</h1>
-    <p>دي صفحة تجريبية مجانية مستضافة على GitHub Pages أو Vercel.</p>
-  </body>
+<html lang="ar">
+<head>
+  <meta charset="UTF-8" />
+  <title>موقعي الجميل</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #4facfe, #00f2fe);
+      color: #fff;
+      text-align: center;
+    }
+    header {
+      background-color: rgba(0, 0, 0, 0.3);
+      padding: 20px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 3em;
+    }
+    section {
+      padding: 40px 20px;
+    }
+    section p {
+      font-size: 1.2em;
+      max-width: 600px;
+      margin: auto;
+      line-height: 1.6;
+    }
+    footer {
+      background-color: rgba(0, 0, 0, 0.3);
+      padding: 10px;
+      font-size: 0.9em;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>أهلاً بك في موقعي الرهيب 🌟</h1>
+  </header>
+  <section>
+    <p>
+      دي صفحة تجريبية مستضافة على GitHub Pages.  
+      شكلها أحلى شوية 😎  
+      تقدر تعدل عليها زي ما تحب.
+    </p>
+  </section>
+  <footer>
+    &copy; 2025 - موقع تجريبي مجاني
+  </footer>
+</body>
 </html>
